package com.structural.adapterPattern.exercise2;

/**
 * Target interface required by new client code
 * Target Interface
 */
public interface Customer {

    String getName();

    String getDesignation();

    String getAddress();
}
